Task-7-logging - some changes